--- a/appchat/package.json
+++ b/appchat/package.json
@@ -14,6 +14,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/react": "^17.0.11",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1"
   }
