--- a/appchat/package.json
+++ b/appchat/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^4.16.6",
+    "firebase": "^8.6.8",
     "next": "11.0.1",
     "next-images": "^1.8.1",
     "react": "17.0.2",
@@ -17,6 +19,7 @@
   "devDependencies": {
     "@types/react": "^17.0.11",
     "eslint": "7.29.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "typescript": "^4.3.4"
   }
 }
